--- a/index-1.html
+++ b/index-1.html
@@ -23,5 +23,6 @@
         <input type="submit" value="Login" />
       </form>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
